feature/Make adding a new language more generic at OBP-API portal

--- a/obp-api/src/main/webapp/templates-hidden/default.html
+++ b/obp-api/src/main/webapp/templates-hidden/default.html
@@ -248,13 +248,9 @@ Berlin 13359, Germany
 					</li>
 				</ul>
 				<br>
-				<div class="language-tag" data-lift="WebUI.currentPage">
+				<div class="language-tag"  data-lift="WebUI.currentPage">
 					<span><a href="#">Language</a></span>
-					<span><a onclick="setCookie('SELECTED_LOCALE', 'en_GB')" id="en" href="/">EN</a></span>
-					<span id="locale_separator">|</span>
-					<span><a onclick="setCookie('SELECTED_LOCALE', 'es_ES')" id="es" href="/">ES</a></span>
-					<span id="locale_separator_ro_RO">|</span>
-					<span><a onclick="setCookie('SELECTED_LOCALE', 'ro_RO')" id="ro" href="/">RO</a></span>
+					<div id="supported-language-list"></div>
 				</div>
 				<div id="copyright">
 					<a href="http://openbankproject.com"><lift:loc locid="open_bank_project_is">Open Bank Project is &copy;2011 - </lift:loc> <span id="copyright-year" data-lift="WebUI.currentYearText">2018</span> </a> <a href="http://tesobe.com"><lift:loc locid="and_commercial_licenses">TESOBE and distributed under the AGPL and commercial licenses. </lift:loc></a>
