--- a/obp-api/src/main/webapp/user-information.html
+++ b/obp-api/src/main/webapp/user-information.html
@@ -57,6 +57,10 @@ Berlin 13359, Germany
                         <label for="user-info-access-token">Access Token</label>
                         <input readonly type="text" id="user-info-access-token" class="form-control" aria-describedby="consumer-registration-app-name-error">
                     </div>
+                    <div class="form-group">
+                        <label for="user-info-user-id">User ID</label>
+                        <input readonly type="text" id="user-info-user-id" class="form-control" aria-describedby="consumer-registration-app-name-error">
+                    </div>
                     
                 </div>
             </div>
