feature/added confirm-vrp-consent pages - step2 WIP

--- a/obp-api/src/main/webapp/confirm-vrp-consent-request.html
+++ b/obp-api/src/main/webapp/confirm-vrp-consent-request.html
@@ -32,9 +32,6 @@ Berlin 13359, Germany
         <form method="post">
             <div class="form-group">
                 <h3 id="confirm-vrp-consent-request-form-title">Please check the VRP Consent Request:  </h3>
-                <div id="identifier-error-div" class="alert alert-danger hide">
-                    <span class="lift:Msg?id=identifier-error&errorClass=error">error</span>
-                </div>
             </div>
 
             <pre id="confirm-vrp-consent-request-response-json">
@@ -43,9 +40,7 @@ Berlin 13359, Germany
             <div class="row">
                 <input id="confirm-vrp-consent-request-confirm-submit-button" class="btn btn-danger pull-right" type="submit" value="Confirm"
                        tabindex="0"/>
-                <input id="confirm-vrp-consent-request-deny-submit-button" class="btn btn-danger pull-right" type="submit" value="Deny"
-                       tabindex="0"/>
-                
+                <a id="confirm-vrp-consent-request-deny-submit-button" class="btn btn-danger pull-right"  href="/">Deny</span></a>
             </div>
             <br>
         </form>
