--- a/obp-api/src/main/webapp/confirm-vrp-consent-request.html
+++ b/obp-api/src/main/webapp/confirm-vrp-consent-request.html
@@ -28,23 +28,156 @@ Berlin 13359, Germany
 -->
 
 <div data-lift="surround?with=default;at=content">
-    <div id="confirm-vrp-consent-request-div" data-lift="VrpConsentCreation.confirmVrpConsentRequest">
+    <div id="confirm-vrp-consent-request-div" style="width: 90%; margin: 0 auto;" data-lift="VrpConsentCreation.confirmVrpConsentRequest">
         <form method="post">
             <div class="form-group">
-                <h3 id="confirm-vrp-consent-request-form-title">Please check the VRP Consent Request:  </h3>
+                <h3 id="confirm-vrp-consent-request-form-title">Please check the VRP Consent Request: 1111 </h3>
+            </div>
+            <div class="wrap-text">
+                <h4>From Account</h4>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="from_bank_routing_scheme">Bank Scheme</label>
+                        <input type="text" name="from_bank_routing_scheme" id="from_bank_routing_scheme" class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="from_bank_routing_address">Bank Address</label>
+                        <input type="text" name="from_bank_routing_address" id="from_bank_routing_address" class="form-control">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="from_branch_routing_scheme">Branch Scheme</label>
+                        <input type="text" name="from_branch_routing_scheme" id="from_branch_routing_scheme"  class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="from_branch_routing_address">Branch Address</label>
+                        <input type="text" name="from_branch_routing_address" id="from_branch_routing_address" class="form-control">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="from_routing_scheme">Account Scheme</label>
+                        <input type="text" name="from_routing_scheme" id="from_routing_scheme"  class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="from_routing_address">Account Address</label>
+                        <input type="text" name="from_routing_address" id="from_routing_address" class="form-control">
+                    </div>
+                </div>
+                <hr>
+                <h4>To Account</h4>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="to_bank_routing_scheme">Bank Scheme</label>
+                        <input type="text" name="to_bank_routing_scheme" id="to_bank_routing_scheme" class="form-control" >
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="to_bank_routing_address">Bank Address</label>
+                        <input type="text" name="to_bank_routing_address" id="to_bank_routing_address" class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="to_branch_routing_scheme">Branch Scheme</label>
+                        <input type="text"   name="to_branch_routing_scheme" id="to_branch_routing_scheme" class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="to_branch_routing_address">Branch Address</label>
+                        <input type="text" name="to_branch_routing_address" id="to_branch_routing_address" class="form-control">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="to_routing_scheme">Account Scheme</label>
+                        <input type="text"  name="to_routing_scheme" id="to_routing_scheme" class="form-control" >
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="to_routing_address">Account Address</label>
+                        <input type="text" name="to_routing_address" id="to_routing_address" class="form-control">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-12">
+                        <label for="counterparty_name">Counterparty Name (For your reference.)</label>
+                        <input type="text" name="counterparty_name" id="counterparty_name" class="form-control">
+                    </div>
+                </div>
+                <hr>
+                <h4>Limits</h4>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="currency">Currency</label>
+                            <input type="text" name="currency" id="currency" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label for="max_single_amount">Max single amount</label>
+                            <input type="number" min="0" value="100" name="max_single_amount" id="max_single_amount" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="max_monthly_amount">Max monthly amount</label>
+                            <input type="number" min="0" value="100" name="max_monthly_amount" id="max_monthly_amount" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="max_yearly_amount">Max yearly amount</label>
+                            <input type="number" min="0" value="1200" name="max_yearly_amount" id="max_yearly_amount" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="max_total_amount">Max total amount</label>
+                            <input type="number" min="0" value="1200" name="max_total_amount" id="max_total_amount" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="max_number_of_monthly_transactions">Max number of monthly transactions</label>
+                            <input type="number" min="0" value="1" name="max_number_of_monthly_transactions" id="max_number_of_monthly_transactions" class="form-control">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="max_number_of_yearly_transactions">Max number of yearly transactions</label>
+                            <input type="number" min="0" value="12" name="max_number_of_yearly_transactions" id="max_number_of_yearly_transactions" class="form-control">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="max_number_of_transactions">Max number of total transactions</label>
+                            <input type="number" min="0" value="12" name="max_number_of_transactions" id="max_number_of_transactions" class="form-control">
+                        </div>
+                    </div>
+                </div>
+                <h4>Other</h4>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="time_to_live_in_seconds">Time to live in seconds</label>
+                            <input type="number" min="1" value="31556926" name="time_to_live_in_seconds" id="time_to_live_in_seconds" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="valid_from">Valid from</label>
+                            <input type="text" name="valid_from" id="valid_from" class="form-control" data-date-format="YYYY-MM-DDTHH:mm:ss">
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            <label for="phone_number">Phone number</label>
+                            <input type="text" name="phone_number" id="phone_number" class="form-control">
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <pre id="confirm-vrp-consent-request-response-json">
-                
-            </pre>
             <div class="row">
-                <input id="confirm-vrp-consent-request-confirm-submit-button" class="btn btn-danger pull-right" type="submit" value="Confirm"
+                <input id="confirm-vrp-consent-request-confirm-submit-button" class="btn btn-danger" type="submit" value="Confirm"
                        tabindex="0"/>
-                <a id="confirm-vrp-consent-request-deny-submit-button" class="btn btn-danger pull-right"  href="/">Deny</span></a>
+                <a id="confirm-vrp-consent-request-deny-submit-button" class="btn btn-danger"  href="/">Deny</span></a>
             </div>
             <br>
-        </form>
     </div>
-
 </div>
-
