--- a/obp-api/src/main/webapp/confirm-vrp-consent-request.html
+++ b/obp-api/src/main/webapp/confirm-vrp-consent-request.html
@@ -28,13 +28,15 @@ Berlin 13359, Germany
 -->
 
 <div data-lift="surround?with=default;at=content">
-    <div id="confirm-vrp-consent-request-div" style="width: 90%; margin: 0 auto;" data-lift="VrpConsentCreation.confirmVrpConsentRequest">
-        <form method="post">
-            <div class="form-group">
-                <h3 id="confirm-vrp-consent-request-form-title">Please check the VRP Consent Request: </h3>
-                <p id="confirm-vrp-consent-request-form-text"></p>
+    <div id="confirm-vrp-consent-request" style="width: 90%; margin: 0 auto;" data-lift="VrpConsentCreation.confirmVrpConsentRequest">
+        <div class="form-group">
+            <h3 id="confirm-vrp-consent-request-form-title">Please check the VRP Consent Request: </h3>
+            <div id="confirm-vrp-consent-request-form-text-div">
+                <pre id="confirm-vrp-consent-request-form-text"></pre>
             </div>
-            <div class="wrap-text">
+        </div>
+        <form method="post">
+            <div class="wrap-text" id="confirm-vrp-consent-request-form-fields">
                 <div class="form-group col-md-6">
                 <h4>From Account</h4>
                 <div class="form-row">
@@ -180,9 +182,18 @@ Berlin 13359, Germany
             <br>
             <script>
                 // Apply the `readonly` attribute dynamically
-                const elements = document.querySelectorAll('#confirm-vrp-consent-request-div input, #confirm-vrp-consent-request-div textarea');
+                const elements = document.querySelectorAll('#confirm-vrp-consent-request input, #confirm-vrp-consent-request textarea');
                 elements.forEach(el => el.setAttribute('readonly', 'readonly'));
             </script>
+
+            <style>
+                pre {
+                  white-space: pre-wrap;  /* Preserve whitespace and wrap at spaces */
+                  word-break: normal;     /* Prevent breaking words */
+                  overflow-wrap: normal;  /* Prevent breaking words */
+                  overflow-x: auto;       /* Allow horizontal scrolling if necessary */
+                }
+            </style>
         </form>
     </div>
 </div>
