feature/Implement BG consent flow when user chooses accounts to link at confirmation step

--- a/obp-api/src/main/webapp/confirm-bg-consent-request.html
+++ b/obp-api/src/main/webapp/confirm-bg-consent-request.html
@@ -32,7 +32,7 @@ Berlin 13359, Germany
         <div class="form-group">
             <h3 id="confirm-bg-consent-request-form-title">Please check the Berlin Group Consent Request: </h3>
             <div id="confirm-bg-consent-request-form-text-div">
-                <pre id="confirm-bg-consent-request-form-text"></pre>
+                <div id="confirm-bg-consent-request-form-text"></div>
             </div>
         </div>
         <form method="post">
